# wsg50_ros_sun

./: README.md
Firmware_Tactile/: AD7490.c  adcint.c
refills_unicampania_helper_lib/: CMakeLists.txt  package.xml
refills_unicampania_helper_lib/include/: ANN1.0.h  ANN_Layer1.0.h  Helper1.0.h  RFT_IF_PACKET_Rev1.0.h  linear_filter.h  robotous_sensor.h  serial_port.h
refills_unicampania_helper_lib/src/ANN/: ANN1.0.cpp  ANN_Layer1.0.cpp
refills_unicampania_helper_lib/src/Helper/: Helper1.0.cpp
refills_unicampania_helper_lib/src/linear_filter/: linear_filter.cpp
refills_unicampania_helper_lib/src/robotous/: RFT_IF_PACKET_Rev1.0.cpp  (+1 more)
ros_toon/: CMakeLists.txt  package.xml
serial/: CMakeLists.txt
wsg_50_common_sun/: CMakeLists.txt  package.xml
wsg_50_common_sun/msg/: Tactile.msg
wsg_50_common_sun/srv/: Graspsrv.srv
wsg_50_control_sun/: CMakeLists.txt  package.xml
wsg_50_control_sun/src/: force_control_node.cpp
wsg_50_driver_sun/: CMakeLists.txt  cmd_measure_light.lua  package.xml
wsg_50_driver_sun/Filter_files/: A.txt  B.txt  C.txt  D.txt
wsg_50_driver_sun/Finger_files/: gen_net_files_V2.m
wsg_50_driver_sun/launch/: wsg_50_tactile_combine.launch  wsg_50_tactile_serial.launch  wsg_50_tactile_serial_dual.launch  wsg_50_tcp_script_finger.launch
wsg_50_driver_sun/src/: cmd.c  combine_wrench_node.cpp  common.cpp  filter_tactile_node.cpp  functions.cpp  main.cpp  main_can.cpp  msg.c  read_tactile_serial_node.cpp  read_wrench_node.cpp
wsg_50_simulation_sun/: CMakeLists.txt  package.xml
wsg_50_simulation_sun/launch/: wsg_50.launch  wsg_50_controllers.launch  wsg_50_modular_controllers.launch  wsg_50_powerball_controllers.launch  wsg_50_teleop.launch
wsg_50_simulation_sun/src/: wsg_50_sim_driver.cpp
(+39 files in other folders)
